test/errors/def_parameters_posonly.py.expected
test/errors/def_parameters_posonly.py:1 error: at least one argument must precede '/'
test/errors/def_parameters_posonly.py:4 error: at least one argument must precede '/'
test/errors/def_parameters_posonly.py:7 error: '/' must be ahead of '*'
test/errors/def_parameters_posonly.py:10 error: '/' must be ahead of '**'
